# AdventOfCode2021

./: .gitignore  Aoc.hs  Cargo.toml  LICENSE  Makefile  Output.md  README.md  a.json  aoc.opam  deps.edn  fetch.sh  notes.md  p.py  run.sh  t.py  timings.md
2015/: Makefile  README.md
2015/src/: 02.clj  04.clj  05.clj  06.clj  07.clj  09.clj  13.clj  14.clj  15.clj  18.clj  20.clj  24.clj
2016/: Makefile  README.md
2016/lib/: aoc.ml  dune
2016/src/: day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day09.ml  day10.ml  day12.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day23.ml  day24.ml  dune
2017/: Aoc.hs  Makefile  README.md  run.sh
2017/src/: 02.hs  03.hs  04.hs  06.hs  08.hs  09.hs  11.hs  13.hs  20.hs  23.hs  24.hs
2018/: Makefile  README.md  fetch.sh
2018/inputs/: 07.in  09.in  10.in  13.in  14.in  15.in  19.in  21.in  24.in
2018/src/: 02.py  11.py  16.py  17.py  20.py  21.py
2019/: Makefile  README.md
2019/src/: intcoder.rs
2020/: Makefile  README.md  notes.md  timings.md
2021/: Makefile  README.md  fetch.sh  timings.md
2021/inputs/: 04.in  07.in  09.in  11.in  13.in  15.in  16.in  17.in  19.in  22.in  25.in
2022/: Cargo.toml  Makefile  README.md  fetch.sh  timings.md
2022/inputs/: 01.in  02.in  03.in  06.in  12.in  13.in  14.in  15.in  17.in  19.in
2022/src/: lib.rs
2023/: Cargo.toml  Makefile  README.md
2023/src/: template.rs
2024/: Cargo.toml  README.md
2024/src/: main.rs  template.rs
inputs/: 01.in  02.in  03.in  04.in  05.in  06.in  07.in  08.in  09.in  10.in  11.in  12.in  13.in  14.in  16.in  17.in  18.in  20.in  21.in  22.in  23.in  25.in
lib/: aoc.ml
src/: 01.clj  01.hs  01.ml  01.py  02.hs  02.py  03.clj  03.hs  03.py  04.clj  04.hs  04.py  05.clj  05.hs  05.py  06.hs  06.py  07.clj  07.hs  07.py  08.clj  08.hs  08.py  09.clj  09.hs  09.py  10.clj  10.hs  10.py  11.clj  11.py  12.clj  12.hs  12.py  13.clj  13.hs  13.py  14.clj  14.hs  14.py  (+67 more)
