[package]
name = "aoc"
version = "0.1.0"
authors = ["Axel Lindeberg"]
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
hashbrown = "0.11"

# main.rs dependencies
regex = "1.5"
once_cell = "1.9"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
