(executables
  (names day01)
  (modules day01)
  (libraries aoc str))

(executables
  (names day02)
  (modules day02)
  (libraries aoc))

(executables
  (names day03)
  (modules day03)
  (libraries aoc str))

(executables
  (names day04)
  (modules day04)
  (libraries aoc str))

(executables
  (names day05)
  (modules day05)
  (libraries aoc))

(executables
  (names day06)
  (modules day06)
  (libraries aoc))

(executables
  (names day07)
  (modules day07)
  (libraries aoc str))

(executables
  (names day08)
  (modules day08)
  (libraries aoc str))

(executables
  (names day09)
  (modules day09)
  (libraries aoc))

(executables
  (names day10)
  (modules day10)
  (libraries aoc str))
