(executables
  (names day01)
  (modules day01)
  (libraries aoc str))

(executables
  (names day02)
  (modules day02)
  (libraries aoc))

(executables
  (names day03)
  (modules day03)
  (libraries aoc str))

(executables
  (names day04)
  (modules day04)
  (libraries aoc str))

(executables
  (names day05)
  (modules day05)
  (libraries aoc))

(executables
  (names day06)
  (modules day06)
  (libraries aoc))

(executables
  (names day07)
  (modules day07)
  (libraries aoc str))

(executables
  (names day08)
  (modules day08)
  (libraries aoc str))

(executables
  (names day09)
  (modules day09)
  (libraries aoc))

(executables
  (names day10)
  (modules day10)
  (libraries aoc str))

(executables
  (names day11)
  (modules day11)
  (libraries aoc))

(executables
  (names day12)
  (modules day12)
  (libraries aoc))

(executables
  (names day13)
  (modules day13)
  (libraries aoc))

(executables
  (names day14)
  (modules day14)
  (libraries aoc))

(executables
  (names day15)
  (modules day15)
  (libraries aoc str))

(executables
  (names day16)
  (modules day16)
  (libraries aoc))

(executables
  (names day17)
  (modules day17)
  (libraries aoc))

(executables
  (names day18)
  (modules day18)
  (libraries aoc))

(executables
  (names day19)
  (modules day19)
  (libraries aoc))

(executables
  (names day20)
  (modules day20)
  (libraries aoc))

(executables
  (names day21)
  (modules day21)
  (libraries aoc))

(executables
  (names day22)
  (modules day22)
  (libraries aoc str))
